# laba5

./: .travis.yml  CMakeLists.txt
include/: stack1.hpp  stack2.hpp
scripts/: checks.sh
sources/: source.cpp
tests/: test.cpp
